Mantaflow: Fluid guides don't affect simulation. #79201

Closed
opened 2020-07-23 19:31:29 +02:00 by Iago Mota · 10 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce GTX 650 Ti
Processor: Intel® Core™ i7-3770

Blender Version
Broken: 2.91.0 Alpha
Worked: 2.82

Short description of error
Fuid guides (effectors and other fluid domains) aren't influencing the behavior of smoke.
C-GuideBugDemo.mp4

Exact steps for others to reproduce the error
2.91.0a-Guides.blend

  1. In any smoke simulation with a moving effector set to "Guide", enable fluid guiding in the smoke domain.
  2. If the cache type is set to Modular, bake the simulation after the guides. If the cache type is set to Final/All, bake the whole simulation.
**System Information** Operating system: Windows 10 Graphics card: Nvidia GeForce GTX 650 Ti Processor: Intel® Core™ i7-3770 **Blender Version** Broken: 2.91.0 Alpha Worked: 2.82 **Short description of error** Fuid guides (effectors and other fluid domains) aren't influencing the behavior of smoke. [C-GuideBugDemo.mp4](https://archive.blender.org/developer/F8716635/C-GuideBugDemo.mp4) **Exact steps for others to reproduce the error** [2.91.0a-Guides.blend](https://archive.blender.org/developer/F8716639/2.91.0a-Guides.blend) 1. In any smoke simulation with a moving effector set to "Guide", enable fluid guiding in the smoke domain. 2. If the cache type is set to Modular, bake the simulation after the guides. If the cache type is set to Final/All, bake the whole simulation.
Author
Added subscriber: @Iago-Diogo-de-Vasconcelos-Mota
Author

By the way, here's the file I used for the 2.82 demo, just in case. 2.82-Guides.blend

By the way, here's the file I used for the 2.82 demo, just in case. [2.82-Guides.blend](https://archive.blender.org/developer/F8716645/2.82-Guides.blend)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @sebbas

Added subscriber: @sebbas

Thanks for reporting this! It looks like "Guiding" broke during the OpenVDB update for 2.90. Fix coming up!

Thanks for reporting this! It looks like "Guiding" broke during the OpenVDB update for 2.90. Fix coming up!
Sebastián Barschkis self-assigned this 2020-08-05 15:34:12 +02:00

This issue was referenced by c2691c93d5

This issue was referenced by c2691c93d51409a987381171af920eeec30e484f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @Aeneas

Added subscriber: @Aeneas

This is again a problem in 3.0.

This is again a problem in 3.0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79201
No description provided.