Fix T79201: Mantaflow: Fluid guides don't affect simulation.

This broke during the OpenVDB update for 2.90. Just making sure that guiding velocity files are being read correctly.